--- a/deployment/coworking.yaml
+++ b/deployment/coworking.yaml
@@ -45,12 +45,8 @@ spec:
           initialDelaySeconds: 5
           timeoutSeconds: 5
         envFrom:
-        - configMapRef:
-            name: <NAME OF THE ConfigMap>
-        env:
-        - name: DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: <NAME OF THE Secret>
-              key: <THE KEY FROM Secret WHICH has THE ENCODED PASSWORD>
+          - secretRef:
+              name: my-project-three-postgres-db-secret
+          - configMapRef:
+              name: mmy-project-three-db-configmap
       restartPolicy: Always
