--- a/deployment/coworking.yaml
+++ b/deployment/coworking.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: coworking
-        image: <DOCKER_IMAGE_URI_FROM_ECR>
+        image: 590902878164.dkr.ecr.us-east-1.amazonaws.com/coworking-project3:latest
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
@@ -48,5 +48,5 @@ spec:
           - secretRef:
               name: my-project-three-postgres-db-secret
           - configMapRef:
-              name: mmy-project-three-db-configmap
+              name: my-project-three-db-configmap
       restartPolicy: Always
