--- a/analytics/.env
+++ b/analytics/.env
@@ -1,5 +1,11 @@
-DB_USERNAME=postgres
-DB_PASSWORD=r3YPnJVUVn
+DB_USERNAME=myuser
+DB_PASSWORD=mypassword
 DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_NAME=postgres
+DB_PORT=5433
+DB_NAME=mydatabase
+
+; DB_USERNAME=postgres
+; DB_PASSWORD=r3YPnJVUVn
+; DB_HOST=127.0.0.1q
+; DB_PORT=5432
+; DB_NAME=postgres
