--- a/deployment-local/coworking.yaml
+++ b/deployment-local/coworking.yaml
@@ -32,7 +32,7 @@ spec:
       containers:
       - name: coworking
         # Locally hosted docker image
-        image: <DOCKER_IMAGE_NAME>:<IMAGE_TAG>
+        image: 010928182936.dkr.ecr.us-east-1.amazonaws.com/coworking-project3:latest
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
@@ -48,11 +48,11 @@ spec:
           timeoutSeconds: 5
         envFrom:
         - configMapRef:
-            name: <NAME OF THE ConfigMap>
+            name: coworking-config
         env:
         - name: DB_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: <NAME OF THE Secret>
-              key: <THE KEY FROM Secret WHICH has THE ENCODED PASSWORD>
+              name: coworking-secret
+              key: db-password
       restartPolicy: Always
