--- a/deployment-local/secrets.yaml
+++ b/deployment-local/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: my-project-three-postgres-db-secret
+  name: coworking-secret
 type: Opaque
 data:
   db-password: bXlwYXNzd29yZA==
