--- a/deployment/coworking.yaml
+++ b/deployment/coworking.yaml
@@ -49,9 +49,29 @@ spec:
             - configMapRef:
                 name: coworking-config
           env:
+            - name: DB_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: coworking-config
+                  key: DB_HOST
+            - name: DB_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: coworking-config
+                  key: DB_PORT
+            - name: DB_USERNAME
+              valueFrom:
+                configMapKeyRef:
+                  name: coworking-config
+                  key: DB_USERNAME
+            - name: DB_NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: coworking-config
+                  key: DB_NAME
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: coworking-secret
-                  key: db-password
+                  key: DB_PASSWORD
       restartPolicy: Always
