--- a/deployment/configmap.yaml
+++ b/deployment/configmap.yaml
@@ -5,5 +5,6 @@ metadata:
 data:
   DB_NAME: "mydatabase"
   DB_USER: "myuser"
+  DB_USERNAME: "myuser"
   DB_HOST: "postgresql-service"
-  DB_PORT: "5433"
+  DB_PORT: "5432"
